--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "strapi-hols",
   "private": true,
-  "version": "0.1.0",
-  "description": "A Strapi application",
+  "version": "1.0.0",
+  "description": "Strapi API backend for hols app",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
